Fix page haders adding overflow

--- a/skin.css
+++ b/skin.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 /* Variables - Change colors here */
 :root {
 --accent-color: #6C01DF;
@@ -144,6 +146,8 @@ header .notification a .fa {
 /* Page headers */
 
 #main .page-header, .project-header {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: calc(100% + 20px);
   margin-left: -10px;
   margin-top: -5px;
